<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
      <groupId>org.jboss</groupId>
      <artifactId>jboss-parent</artifactId>
      <version>16</version>
   </parent>

   <modelVersion>4.0.0</modelVersion>

   <groupId>org.jboss.beach</groupId>
   <artifactId>jboss-beach-jar-digest</artifactId>
   <version>0.1.0-SNAPSHOT</version>

   <packaging>jar</packaging>

   <name>JBoss Beach Jar Digest</name>

   <description>
      A day at the beach digesting jars.
   </description>

   <build>
      <plugins>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <source>1.8</source>
               <target>1.8</target>
            </configuration>
         </plugin>
         <plugin>
            <artifactId>maven-jar-plugin</artifactId>
            <configuration>
               <archive>
                  <manifest>
                     <mainClass>org.jboss.beach.jar.digest.Main</mainClass>
                  </manifest>
               </archive>
            </configuration>
         </plugin>
          <plugin>
              <artifactId>maven-jar-plugin</artifactId>
              <!--
              <configuration>
                  <archive>
                      <manifest>
                          <mainClass>org.jboss.beach.jar.digest.Main</mainClass>
                      </manifest>
                  </archive>
              </configuration>
              -->
              <executions>
                  <execution>
                      <id>test-jar</id>
                      <goals>
                          <goal>test-jar</goal>
                      </goals>
                  </execution>
              </executions>
          </plugin>
      </plugins>
   </build>

   <dependencyManagement>
      <dependencies>
      </dependencies>
   </dependencyManagement>

   <dependencies>
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.8.2</version>
         <scope>test</scope>
      </dependency>
   </dependencies>

   <properties>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
</project>
